new file edited

--- a/MachineLearning/LinearRegression:MultipleInputs.ipynb
+++ b/MachineLearning/LinearRegression:MultipleInputs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "4              no             yes        2       no        furnished  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "4  3.551716  1.045766  1.402131  -0.569663  0.224204  1.516299"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
        "4                 0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,6 +620,200 @@
     "    lambda col: pd.Categorical(col).codes\n",
     ")\n",
     "housing_dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Splitting the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = 42\n",
+    "np.random.seed(seed)\n",
+    "\n",
+    "def split_dataset(dataset, training_ratio = 0.8, val_ratio = 0.1):\n",
+    "    random_indices = np.random.permutation(len(dataset))\n",
+    "    \n",
+    "    train_size = int(len(dataset) * training_ratio)\n",
+    "    val_size = int(len(dataset) * val_ratio)\n",
+    "\n",
+    "    train_indices = random_indices[:train_size]\n",
+    "    val_indices = random_indices[train_size:train_size + val_size]\n",
+    "    test_indices = random_indices[train_size + val_size:]\n",
+    "\n",
+    "    train_ds = dataset.iloc[train_indices]\n",
+    "    val_ds = dataset.iloc[val_indices]\n",
+    "    test_ds = dataset.iloc[test_indices]    \n",
+    "\n",
+    "    train_X = train_ds.iloc[:, :-1]\n",
+    "    train_y = train_ds.iloc[:, -1]\n",
+    "\n",
+    "    val_X = val_ds.iloc[:, :-1]\n",
+    "    val_y = val_ds.iloc[:, -1]\n",
+    "\n",
+    "    test_X = test_ds.iloc[:, :-1]\n",
+    "    test_y = test_ds.iloc[:, -1]\n",
+    "\n",
+    "    return train_X, train_y, val_X, val_y, test_X, test_y\n",
+    "\n",
+    "train_X, train_y, val_X, val_y, test_X, test_y = split_dataset(housing_dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_house_price(X, w, b):\n",
+    "    return np.dot(X, w) + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = np.random.randint(low=100, high=1000, size=(train_X.columns.size))\n",
+    "b = np.random.randint(low=100, high=1000)\n",
+    "\n",
+    "print(f\"w = {w}, b = {b}\")\n",
+    "y_pred = get_house_price(train_X, w, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cost Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cost_function(x, y_true, w, b):\n",
+    "    y_pred = get_house_price(x, w, b)\n",
+    "    mse = np.mean((y_pred - y_true) ** 2)\n",
+    "    return mse\n",
+    "\n",
+    "mse  = cost_function(train_X, train_y, w, b)\n",
+    "print(f\"Mean Squared Error: {mse} (Parameters not learned yet)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_gradient(x, y_true, w, b):\n",
+    "    delta = 1e-9\n",
+    "\n",
+    "    cost_1 = cost_function(x, y_true, w, b)\n",
+    "    cost_2 = cost_function(x, y_true, w + delta, b)\n",
+    "    cost_3 = cost_function(x, y_true, w, b + delta)\n",
+    "    dw = (cost_2 - cost_1) / delta\n",
+    "    db = (cost_3 - cost_1) / delta\n",
+    "    return dw, db  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Train the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = np.zeros(train_X.columns.size)\n",
+    "b = 0\n",
+    "\n",
+    "epoch = 1000\n",
+    "\n",
+    "for epoch in range(epoch):\n",
+    "\n",
+    "\n",
+    "    \"\"\"Compute Lofis\"\"\"\n",
+    "    train_loss = cost_function(train_X, train_y, w, b)\n",
+    "    val_loss = cost_function(val_X, val_y, w, b)\n",
+    "    print(f\"Train Loss: {train_loss}\")\n",
+    "    print(f\"Validation Loss: {val_loss}\")\n",
+    "\n",
+    "\n",
+    "    \"\"\"\"Compute Gradient Descent\"\"\"\n",
+    "    dw, db = compute_gradient(train_X, train_y, w, b)\\\n",
+    "\n",
+    "\n",
+    "    \"\"\"Update Parameters\"\"\"\n",
+    "    w = w - learning_rate * dw\n",
+    "    b = b - learning_rate * db\n",
+    "\n",
+    "    if epoch % 100 == 0:\n",
+    "        print(f\"Epoch: {epoch}, Train Loss: {train_loss:0.3f}, Validation Loss: {val_loss:0.3f}\")\n",
+    "        print(\"=====================================\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Final Parameters: w = {w}, b = {b}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_loss = cost_function(test_X, test_y, w, b)\n",
+    "print(f\"MSE is  {test_loss}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"\"\"The Phenomenon of overfitting occurs when the model learns the training data too well, including its noise and outliers, leading to poor generalization on unseen data. In this case, the model performs well on the training set but fails to predict accurately on the validation and test sets. To mitigate overfitting, techniques such as regularization, dropout, and early stopping can be employed. Regularization adds a penalty term to the loss function to discourage complex models, while dropout randomly drops units during training to prevent co-adaptation. Early stopping monitors validation loss and halts training when it starts to increase, ensuring the model retains its ability to generalize. By implementing these strategies, we can improve the model's performance on unseen data and reduce overfitting.\"\"\""
    ]
   }
  ],
